--- a/srcs/docker-compose.yaml
+++ b/srcs/docker-compose.yaml
@@ -1,12 +1,12 @@
 
-# volumes:
-#   volume-django:
-#     name: volume-django
-#     driver: local
-#     driver_opts:
-#       type: 'none'
-#       o: 'bind'
-#       device: ${HOME}/data/volume-django
+volumes:
+  volume-django:
+    name: volume-django
+    driver: local
+    driver_opts:
+      type: 'none'
+      o: 'bind'
+      device: ${HOME}/data/volume-django
 
 services:
   django:
@@ -16,8 +16,8 @@ services:
     image: django:transcendence
     container_name: django
     restart: on-failure:10
-#   Binds the HOST ~/data/volume-django -> CONTAINER /usr/src/app/ft_transcendence folder.
-    # volumes:
-    #   - volume-django:/usr/src/app
+  # Binds the HOST ~/data/volume-django -> CONTAINER /usr/src/app/ft_transcendence folder.
+    volumes:
+      - volume-django:/usr/src/app
     ports:
       - "8080:8000"
