ADDED [ nginx service ]

--- a/srcs/requirements/django/Dockerfile
+++ b/srcs/requirements/django/Dockerfile
@@ -1,7 +1,7 @@
 
 # https://hub.docker.com/_/python
 # https://github.com/docker-library/python/blob/b968d488efc09fd34672fc6238182e1222ae005e/3.12/bullseye/Dockerfile
-FROM python:3.12
+FROM python:3.12-slim-bullseye
 
 WORKDIR /usr/src/app
 
@@ -29,5 +29,12 @@ RUN chmod +x /usr/local/bin/entrypoint.sh
 
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 
-CMD ["python", "./ft_transcendence/manage.py", "runserver", "0.0.0.0:8000"]
+# Runs the DAPHNE Asynchronous Server Gateway Interface (ASGI).
+# https://docs.djangoproject.com/en/5.0/howto/deployment/asgi/daphne/
+CMD ["daphne", "-b", "0.0.0.0", "-p", "8000", "ft_transcendence.asgi:application"]
+
+# # UNCOMMENT to run the default server, for development purposes.
+# CMD ["python", "./ft_transcendence/manage.py", "runserver", "0.0.0.0:8000"]
+
+# # UNCOMMENT for debugging purposes.
 # CMD ["tail", "-f", "/dev/urandom"]
