--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,16 +1,21 @@
 
 # https://hub.docker.com/_/nginx
-FROM nginx:1.26-alpine-slim
+# FROM nginx:1.26-alpine-slim
+FROM debian:bullseye
 
 WORKDIR /
+
+COPY ./tools/dependencies.sh /usr/local/bin/dependencies.sh
+RUN chmod +x /usr/local/bin/dependencies.sh && \
+	./usr/local/bin/dependencies.sh
 
 COPY ./tools/entrypoint.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/entrypoint.sh
 
 # ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 
-# # Starts thw nginx server as a foreground process.
-# CMD ["nginx", "-g", "daemon off"]
+# Starts thw nginx server as a foreground process.
+CMD ["nginx", "-g", "daemon off;"]
 
-# UNCOMMENT for debugging purposes.
-CMD ["tail", "-f", "/dev/urandom"]
+# # UNCOMMENT for debugging purposes.
+# CMD ["tail", "-f", "/dev/urandom"]
