--- a/srcs/docker-compose.yaml
+++ b/srcs/docker-compose.yaml
@@ -21,3 +21,13 @@ services:
       - volume-django:/usr/src/app
     ports:
       - "8080:8000"
+
+  nginx:
+    build:
+      context: ./requirements/nginx
+      dockerfile: Dockerfile
+    image: nginx:transcendence
+    container_name: nginx
+    restart: on-failure:10
+    ports:
+    - "10000:80"
