--- a/srcs/docker-compose.yaml
+++ b/srcs/docker-compose.yaml
@@ -31,3 +31,18 @@ services:
     restart: on-failure:10
     ports:
     - "10000:80"
+
+  postgresql:
+    build:
+      context: ./requirements/postgresql
+      dockerfile: Dockerfile
+      args:
+        - POSTGRES_USER=${POSTGRES_USER}
+        - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+        - POSTGRES_DB=${POSTGRES_DB}
+    image: postgresql:transcendence
+    container_name: postgresql
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
