UPDATED [ psycopg2 under pip modules installations ]

--- a/srcs/docker-compose.yaml
+++ b/srcs/docker-compose.yaml
@@ -21,6 +21,10 @@ services:
       - volume-django:/usr/src/app
     ports:
       - "8080:8000"
+    environment:
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
 
   nginx:
     build:
